--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
+  "name": "comp6452-project-2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "do": "npx tsc && node build/index.js deploy oracle",
+    "lo": "npx tsc && node build/index.js listen oracle",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^15.12.2",
+    "typescript": "^4.3.2"
+  },
   "dependencies": {
-    "axios": "^0.27.2",
-    "solc": "^0.8.15",
-    "web3": "^1.7.4"
+    "axios": "^0.21.1",
+    "solc": "^0.8.5",
+    "web3": "^1.3.6"
   }
 }
