--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.1",
     "axios": "^0.21.1",
     "solc": "^0.8.5",
     "web3": "^1.3.6"
