--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.1",
     "axios": "^0.21.1",
+    "chalk": "^5.0.1",
     "solc": "^0.8.5",
     "web3": "^1.3.6"
   }
