--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^8.2.1",
     "@types/node": "^15.12.2",
+    "@types/vorpal": "^1.12.2",
     "typescript": "^4.3.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.1",
     "axios": "^0.21.1",
-    "chalk": "^5.0.1",
+    "chalk": "^4.1.2",
     "solc": "^0.8.5",
+    "vorpal": "^1.12.0",
     "web3": "^1.3.6"
   }
 }
