--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comp6452-project-2",
+  "name": "oracle_example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,9 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/inquirer": "^8.2.1",
     "@types/node": "^15.12.2",
-    "@types/vorpal": "^1.12.2",
     "typescript": "^4.3.2"
   },
   "dependencies": {
@@ -23,6 +21,7 @@
     "chalk": "^4.1.2",
     "solc": "^0.8.5",
     "vorpal": "^1.12.0",
+    "vorpal-as-default": "^0.0.2",
     "web3": "^1.3.6"
   }
 }
