--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "scripts": {
         "bui": "tsc && node build/ui/business/index.js setup -k 0x0ac431843af62030d596973c914ff3eafa6edde5dd261af63a827beb28ace826 -c 0x565ec3d32a5793f7d0becba39c5f4f2b58a4d308",
-        "regulator": "tsc && node build/ui/regulator/index.js setup -k 0xd4732a06cefcfc9e89336a29db7038cd61143128bddea69309646b45dd3d406c -c 0x565ec3d32a5793f7d0becba39c5f4f2b58a4d308",
+        "regulator": "tsc && node build/ui/regulator/index.js setup -k 0xd4732a06cefcfc9e89336a29db7038cd61143128bddea69309646b45dd3d406c -c 0x1648d20b7f6bc5a4fbb88c140d62ea56236f7f0f",
         "chain": "ganache --wallet.seed test",
-        "deploy": "tsc && node build/offchain/oracle/index.js deploy MeatNFT",
+        "deploy": "tsc && node build/offchain/oracle/index.js deploy meatnft-voting",
         "oracle": "tsc && node build/offchain/oracle/index.js listen MeatNFT 0x565ec3d32a5793f7d0becba39c5f4f2b58a4d308"
     },
     "keywords": [],
