--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ],
     "license": "ISC",
     "devDependencies": {
+        "@types/inquirer": "^8.2.1",
         "@types/node": "^15.12.2",
         "typescript": "^4.3.2"
     },
@@ -33,6 +34,7 @@
         "axios": "^0.21.1",
         "chalk": "^4.1.2",
         "firebase": "^9.9.1",
+        "inquirer": "^8.2.4",
         "solc": "^0.8.5",
         "vorpal": "^1.12.0",
         "vorpal-as-default": "^0.0.2",
