--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "bui": "tsc && node build/ui/business/index.js setup -k 0x0ac431843af62030d596973c914ff3eafa6edde5dd261af63a827beb28ace826 -c 0x565ec3d32a5793f7d0becba39c5f4f2b58a4d308",
         "chain": "ganache --wallet.seed test",
-        "regulator": "tsc && node build/ui/regulator/index.js setup -k 0xd4732a06cefcfc9e89336a29db7038cd61143128bddea69309646b45dd3d406c -c 0x1648d20B7f6BC5A4fBb88c140D62eA56236F7f0F",
-        "manager": "tsc && node build/ui/manager/index.js",
+        "rui": "tsc && node build/ui/regulator/index.js setup -k 0xd4732a06cefcfc9e89336a29db7038cd61143128bddea69309646b45dd3d406c -c 0x1648d20B7f6BC5A4fBb88c140D62eA56236F7f0F",
+        "mui": "tsc && node build/ui/manager/index.js",
         "oracle": "tsc && node build/offchain/oracle/index.js listen MeatNFT 0x565ec3d32a5793f7d0becba39c5f4f2b58a4d308"
     },
     "keywords": [],
